@@ -74,7 +74,7 @@ function ep_phraseedit_save( event, base_id )
 function ep_phraseedit_ajax_row( base_id, phrase, width )
 {
 	new Ajax.Request(
-		"/cgi/users/home",
+		eprints_http_cgiroot+"/users/home",
 		{
 			method: "post",
 			onFailure: function() { 
