@@ -46,8 +46,8 @@
 //  Configurationl
 //
 LightboxOptions = Object.extend({
-    fileLoadingImage:        '../style/images/lightbox/loading.gif',
-    fileBottomNavCloseImage: '../style/images/lightbox/closelabel.gif',
+    fileLoadingImage:        eprints_http_root+'/style/images/lightbox/loading.gif',
+    fileBottomNavCloseImage: eprints_http_root+'/style/images/lightbox/closelabel.gif',
 
     overlayOpacity: 0.8,   // controls transparency of shadow overlay
 
